# makiti-market-app

./: .gitignore
app-mobile/: ARCHITECTURE.md  README.md  UX_IMPROVEMENTS.md  pubspec.yaml
app-mobile/ios/Runner/: Info.plist
app-mobile/ios/Runner.xcodeproj/: project.pbxproj
app-mobile/lib/: app.dart  main.dart
app-mobile/lib/core/config/: api_config.dart
app-mobile/lib/core/theme/: app_animations.dart  app_colors.dart  app_spacing.dart  app_text_styles.dart  app_theme.dart
app-mobile/lib/core/utils/: image_cache_helper.dart  image_url_helper.dart
app-mobile/lib/data/models/: product_model.dart
app-mobile/lib/data/repositories/: products_repository.dart
app-mobile/lib/domain/entities/: cart_item.dart  order.dart  product.dart  shopper_performance.dart  shopper_wallet.dart
app-mobile/lib/presentation/bloc/cart/: cart_bloc.dart  cart_event.dart  cart_state.dart
app-mobile/lib/presentation/bloc/navigation/: navigation_bloc.dart  navigation_event.dart  navigation_state.dart
app-mobile/lib/presentation/pages/: account_page.dart  app_selector_page.dart  cart_page.dart  home_page.dart  main_navigation_page.dart  profile_page.dart  shop_page.dart
app-mobile/lib/presentation/widgets/: animated_button.dart  bottom_nav_bar.dart  card_with_shadow.dart  cart_item_widget.dart  category_chip.dart  delivery_header.dart  empty_state.dart  loading_shimmer.dart  product_card.dart  product_grid_card.dart  promotion_card.dart  search_bar_enhanced.dart  section_header.dart  shopper_bottom_nav_bar.dart
app-mobile/test/: widget_test.dart
backend/: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  QUICKSTART.md  README.md  SETUP.md  docker-compose.yml  env.example  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 60d1f09d46a2_create_products_table.py  dd1f01635543_create_products_table.py  make_unit_required.py
backend/app/: __init__.py  main.py
backend/app/api/v1/: __init__.py  router.py
backend/app/api/v1/endpoints/: __init__.py  health.py
backend/app/core/: config.py  database.py  dependencies.py  exceptions.py  init_storage.py  logging.py  queue.py  redis.py  schemas.py  storage.py  utils.py
backend/app/modules/: __init__.py
backend/app/modules/auth/: __init__.py
backend/app/modules/notifications/: __init__.py
backend/app/modules/orders/: __init__.py
backend/app/modules/products/: __init__.py  endpoints.py  models.py  schemas.py  service.py
backend/app/modules/shoppers/: __init__.py
backend/app/modules/wallet/: __init__.py
backend/app/workers/: __init__.py  example.py
backend/scripts/: check_minio_objects.py  cleanup_minio_duplicates.py  download_and_upload_images.py  init_db.sh  seed_products.py  setup_minio_public.py  start_worker.sh  upload_local_images.py
backend/tests/: conftest.py
v2_app_mobile/: README.md  pubspec.yaml
v2_app_mobile/android/app/: build.gradle.kts
v2_app_mobile/ios/Runner/: Info.plist
v2_app_mobile/ios/Runner.xcodeproj/: project.pbxproj
v2_app_mobile/lib/: main.dart
v2_app_mobile/lib/core/config/: api_config.dart
v2_app_mobile/lib/core/errors/: api_exception.dart
v2_app_mobile/lib/core/theme/: app_colors.dart  app_spacing.dart  app_text_styles.dart  app_theme.dart
v2_app_mobile/lib/domain/entities/: product.dart
v2_app_mobile/lib/presentation/pages/: home_page.dart
v2_app_mobile/linux/: CMakeLists.txt
v2_app_mobile/linux/runner/: my_application.cc
v2_app_mobile/macos/Runner.xcodeproj/: project.pbxproj
v2_app_mobile/macos/Runner/Configs/: AppInfo.xcconfig
v2_app_mobile/test/: widget_test.dart
v2_app_mobile/web/: index.html  manifest.json
v2_app_mobile/windows/: CMakeLists.txt
v2_app_mobile/windows/runner/: Runner.rc  main.cpp
(+24 files in other folders)
